--- a/DataS&Algorithms-Level3-Gupta/bin/.gitignore
+++ b/DataS&Algorithms-Level3-Gupta/bin/.gitignore
@@ -1,3 +1,10 @@
+/_01_Simple_Array_Algorithms/
 /_02_Firework_Display/
-/_00_IntroToArrays/
 /_03_More_Array_Fun/
+/_00_Dynamic_Integer_Array/
+/_01_IntroToArrayLists/
+/_02_Integer_Stack/
+/_03_IntroToStacks/
+/_04_HangMan/
+/_05_String_Integer_Pair/
+/_06_Intro_To_Hash_Maps/
