--- a/DataS&Algorithms-Level3-Gupta/bin/.gitignore
+++ b/DataS&Algorithms-Level3-Gupta/bin/.gitignore
@@ -1,10 +1,13 @@
-/_01_Simple_Array_Algorithms/
-/_02_Firework_Display/
-/_03_More_Array_Fun/
-/_00_Dynamic_Integer_Array/
-/_01_IntroToArrayLists/
-/_02_Integer_Stack/
-/_03_IntroToStacks/
-/_04_HangMan/
-/_05_String_Integer_Pair/
-/_06_Intro_To_Hash_Maps/
+/_00_Simple_Array_Algorithms/
+/_00_00_IntroToArrays/
+/_00_01_Simple_Array_Algorithms/
+/_00_02_Firework_Display/
+/_00_03_More_Array_Fun/
+/_01_00_Dynamic_Integer_Array/
+/_01_01_IntroToArrayLists/
+/_01_02_Integer_Stack/
+/_01_03_IntroToStacks/
+/_01_04_HangMan/
+/_01_05_String_Integer_Pair/
+/_01_06_Intro_To_Hash_Maps/
+/demo.mp3
