IP: IPod Shuffle: COMP: GuestBook, MurderofCrows, LongChipComp

--- a/DataS&Algorithms-Level3-Gupta/.classpath
+++ b/DataS&Algorithms-Level3-Gupta/.classpath
@@ -4,6 +4,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="robot.jar"/>
+	<classpathentry kind="lib" path="javazoom.jar"/>
+	<classpathentry kind="lib" path="Hangman.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
