IP: Hangman and TestMatchingBrackets

--- a/DataS&Algorithms-Level3-Gupta/bin/.gitignore
+++ b/DataS&Algorithms-Level3-Gupta/bin/.gitignore
@@ -1,4 +1,4 @@
-/_01_00_Dynamic_Integer_Array/
-/_01_02_Integer_Stack/
-/_01_03_IntroToStacks/
 /_01_04_HangMan/
+/HangMan.class
+/Utilities.class
+/dictionary.txt
