--- a/DataS&Algorithms-Level3-Gupta/bin/.gitignore
+++ b/DataS&Algorithms-Level3-Gupta/bin/.gitignore
@@ -1,3 +1,17 @@
-/_02_02_More_Algorithms/
+/_00_00_IntroToArrays/
+/_00_01_Simple_Array_Algorithms/
+/_00_02_Firework_Display/
+/_00_03_More_Array_Fun/
+/_01_00_Dynamic_Integer_Array/
+/_01_01_IntroToArrayLists/
+/_01_02_Integer_Stack/
+/_01_03_IntroToStacks/
+/_01_04_HangMan/
+/_01_05_String_Integer_Pair/
+/_01_06_Intro_To_Hash_Maps/
 /_02_00_Sorting_Algorithms/
 /_02_01_Searching_Algorithms/
+/_02_02_More_Algorithms/
+/_03_00_Text_Funkifier/
+/_03_01_Animal_Farm/
+/_03_02_Cities/
